@@ -4,6 +4,7 @@ install( FILES
     Crystal/48x48/filesystems/blockdevice.png
     Crystal/16x16/actions/cancel.png
     Crystal/22x22/actions/contents.png
+    Crystal/22x22/actions/down.png
     Crystal/48x48/filesystems/exec.png
     Crystal/22x22/actions/fileclose.png
     Crystal/22x22/actions/fileopen.png
@@ -16,6 +17,16 @@ install( FILES
     Crystal/22x22/actions/view_bottom.png
     Crystal/22x22/actions/view_right.png
     Crystal/22x22/actions/window_new.png
+
+    nuvola/32x32/actions/button_cancel.png
+    nuvola/32x32/actions/fileexport.png
+    nuvola/32x32/actions/pencil.png
+    nuvola/32x32/actions/player_pause.png
+    nuvola/32x32/actions/player_play.png
+    nuvola/32x32/actions/project_open.png
+    nuvola/32x32/actions/rotate.png
+    nuvola/32x32/actions/rotate_cw.png
+    nuvola/32x32/actions/rotate_ccw.png
 
     DESTINATION share/apps/ktechlab/pics
     )
