@@ -78,3 +78,4 @@ Changes between Qt3 and Qt4 port (to be completed)
 - fixed crash on File -> Quit
 - fixed some missing icons: attach blockdevice cancel contents exec fileclose fileopen filesave log reload source source_c
     stop view_bottom view_right window_new
+    button_cancel down fileexport pencil player_pause player_play project_open rotate rotate_ccw rotate_cw
